--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -9,7 +9,7 @@
                 <div style="padding-top:30px" class="" >
 
                     <div class="logo">
-                            <img class="img-responsive" src="./assets/ampath-logo.png">
+                            <img class="img-responsive" src="./assets/internationalcancerinstitute-logo.png">
                     </div>
                    
                           
